# ml-evaluations

./: README.md  pyproject.toml  requirements.dev.txt  requirements.txt
ml_evaluations/: i_choice_scoring.py  i_rank_scoring.py  jaccard_similarity.py  kendalltau.py  multiple_choices_scoring.py  spearman_r.py
tests/ml_evaluations/: test_jaccard_similarity.py  test_kendalltau.py  test_multiple_choices_scoring.py  test_spearman_r.py
